--- a/src/app/modules/usecases/components/direct/direct.component.html
+++ b/src/app/modules/usecases/components/direct/direct.component.html
@@ -1,18 +1,44 @@
+<!-- 
+    <div style="height: 100%; width: 100%;">
+        <section class="x78zum5 xdt5ytf x1iyjqo2 x6ikm8r x5yr21d xh8yej3">
+            <div class="xnz67gz x78zum5 xdt5ytf x1iyjqo2 x5yr21d xmz0i5r">
+                <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1iyjqo2 x2lwn1j xeuugli xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1" style="height: 100%; width: 100%;">
+                    <div class="_aa5b">
+                        <div class="x9f619 xjbqb8w x78zum5 x5ur3kl xopu45v x1bs97v6 xmo9t06 x13fuv20 xu3j5b3 x1q0q8m5 x26u7qi x178xt8z xm81vs4 xso031l xy80clv x1lcm9me x1yr5g0i xrt01vj x10y3i5r x1n2onr6 x6ikm8r x10wlt62 x1iyjqo2 x2lwn1j xeuugli x1q0g3np xqjyukv x1qjc9v5 x1oa3qoh xl56j7k" style="height: 100%; max-width: 935px; width: 100%;">
+
+                            <div class="_aa5c">
+                                <app-directsidebar></app-directsidebar>
+                            </div>
+                            
+                            <div class="x9f619 xvbhtw8 x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1iyjqo2 x2lwn1j xeuugli xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1" style="height: auto;">
+                                <app-directchat></app-directchat>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div> 
+-->
+
+
 <div style="height: 100%; width: 100%;">
     <section class="x78zum5 xdt5ytf x1iyjqo2 x6ikm8r x5yr21d xh8yej3">
         <div class="xnz67gz x78zum5 xdt5ytf x1iyjqo2 x5yr21d xmz0i5r">
             <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1iyjqo2 x2lwn1j xeuugli xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1" style="height: 100%; width: 100%;">
                 <div class="_aa5b">
-                    <div class="x9f619 xjbqb8w x78zum5 x5ur3kl xopu45v x1bs97v6 xmo9t06 x13fuv20 xu3j5b3 x1q0q8m5 x26u7qi x178xt8z xm81vs4 xso031l xy80clv x1lcm9me x1yr5g0i xrt01vj x10y3i5r x1n2onr6 x6ikm8r x10wlt62 x1iyjqo2 x2lwn1j xeuugli x1q0g3np xqjyukv x1qjc9v5 x1oa3qoh xl56j7k" style="height: 100%; max-width: 935px; width: 100%;">
-
+                    <div
+                        class="x9f619 xjbqb8w x78zum5 x5ur3kl xopu45v x1bs97v6 xmo9t06 x13fuv20 xu3j5b3 x1q0q8m5 x26u7qi x178xt8z xm81vs4 xso031l xy80clv x1lcm9me x1yr5g0i xrt01vj x10y3i5r x1n2onr6 x6ikm8r x10wlt62 x1iyjqo2 x2lwn1j xeuugli x1q0g3np xqjyukv x1qjc9v5 x1oa3qoh xl56j7k"
+                        style="height: 100%; max-width: 935px; width: 100%;"
+                    >
                         <div class="_aa5c">
                             <app-directsidebar></app-directsidebar>
                         </div>
-                        
+
                         <div class="x9f619 xvbhtw8 x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1iyjqo2 x2lwn1j xeuugli xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1" style="height: auto;">
                             <app-directchat></app-directchat>
                         </div>
-                        
                     </div>
                 </div>
             </div>
