--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -652,7 +652,7 @@
                                                                         <div id="003" #as003 [routerLinkActive]="['active']" [routerLink]="['explore']">
                                                                             <div class="x1n2onr6">
                                                                                 <a
-                                                                                    (mouseover)="this.mouseOverOptionNav(true, 'explore')" (mouseleave)="this.mouseOverOptionNav(false, 'explore')" (click)="this.explore = true"
+                                                                                    (mouseover)="this.mouseOverOptionNav(true, 'explore')" (mouseleave)="this.mouseOverOptionNav(false, 'explore')" (click)="changeExploreIconNav()"
                                                                                     class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _a6hd"
                                                                                 >
                                                                                     <div
@@ -705,7 +705,7 @@
                                                                         <div id="004" [routerLinkActive]="['active']" [routerLink]="['reels', 'Con7be3jz58']" >
                                                                             <div class="x1n2onr6">
                                                                                 <a
-                                                                                    (mouseover)="this.mouseOverOptionNav(true, 'reels')" (mouseleave)="this.mouseOverOptionNav(false, 'reels')" (click)="this.reels = true"
+                                                                                    (mouseover)="this.mouseOverOptionNav(true, 'reels')" (mouseleave)="this.mouseOverOptionNav(false, 'reels')" (click)="changeReelsIconNav()"
                                                                                     class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _a6hd"
                                                                                 >
                                                                                     <div
@@ -777,7 +777,7 @@
                                                                         <div id="005" [routerLinkActive]="['active']" [routerLink]="['direct/inbox']" >
                                                                             <div class="x1n2onr6">
                                                                                 <a
-                                                                                    (mouseover)="this.mouseOverOptionNav(true, 'message')" (mouseleave)="this.mouseOverOptionNav(false, 'message')" (click)="this.message = true"
+                                                                                    (mouseover)="this.mouseOverOptionNav(true, 'message')" (mouseleave)="this.mouseOverOptionNav(false, 'message')" (click)="changeMessageIconNav()"
                                                                                     class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _a6hd"
                                                                                 >
                                                                                     <div
@@ -864,7 +864,7 @@
                                                                         <div id="007" #as007>
                                                                             <div class="x1n2onr6">
                                                                                 <a
-                                                                                    (mouseover)="this.mouseOverOptionNav(true, 'create')" (mouseleave)="this.mouseOverOptionNav(false, 'create')" (click)="this.create = true"
+                                                                                    (mouseover)="this.mouseOverOptionNav(true, 'create')" (mouseleave)="this.mouseOverOptionNav(false, 'create')" (click)="changeCreateIconNav()"
                                                                                     class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _a6hd"
                                                                                 >
                                                                                     <div
