--- a/src/app/shared/components/main/feed/posts/articlepost/articlepost.component.html
+++ b/src/app/shared/components/main/feed/posts/articlepost/articlepost.component.html
@@ -28,7 +28,7 @@
                                     >
                                         <img
                                             class="x6umtig x1b1mbwd xaqea5y xav7gou xk390pu x5yr21d xpdipgo xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x11njtxf xh8yej3"
-                                            src="https://lujandev.com/wp-content/uploads/2023/03/ld-02-1152x1536.png"
+                                            src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1287&q=80"
                                             alt=""
                                         />
                                     </span>
@@ -115,7 +115,7 @@
                         <div class="_aagv" style="padding-bottom: 125%;">
                             <img
                                 class="x5yr21d xu96u03 x10l6tqk x13vifvy x87ps6o xh8yej3"
-                                src="https://lujandev.com/wp-content/uploads/2023/03/ld-02-1152x1536.png"
+                                src="https://images.unsplash.com/photo-1502783167913-8e718e555a06?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=927&q=80"
                                 alt=""
                                 style="object-fit: cover;"
                             />
