--- a/src/app/shared/components/main/feed/stories/stories.component.html
+++ b/src/app/shared/components/main/feed/stories/stories.component.html
@@ -1,11 +1,45 @@
 <div class="_aac4 _aac5 _aac6 _aj3f">
     <div class="_aauo" role="menu">
         <div class="_aao_">
-            <div class="_aap0" role="presentation">
-                <div class="_aap1">
-                    <ul class="_acay" style="overflow: hidden;">
+            <!-- Dinamic -->
+            <div class="_aap0" role="presentation" >
+                <div class="_aap1" [ngStyle]="{ 'transition': this.netxRightStories ? '700ms cubic-bezier(0.215, 0.61, 0.355, 1) 0s' : '', 'transform': this.netxRightStories ? 'translateX( '+this.clientX+'px)': ''}">
+
+                    <ul  class="_acay" style="overflow: hidden;">
                         <li style="transform: translateX(0); width: 2px;"></li>
                         <li style="transform: translateX(12000px); width: 2px;"></li>
+
+                        <ng-container [ *ngFor="let item of this.stories | slice : (currentPage - 1) * 4  : currentPage * pageSize;   index as i; count as c">
+                            <li   class="_acaz" tabindex="-1" [ngStyle]="{'transform': i == 0 ? 'translateX( ' + (this.translateX-78) + 'px)' : 'translateX( ' + (i*this.translateX+2) + 'px)' }">
+                                <div class="_aauk _aegn">
+                                    <button class="x78zum5 xdt5ytf xjbqb8w x76ihet xwmqs3e x112ta8 xxxdfa6 x1ypdohk x1fu8urw x6s0dn4 xamitd3 x18d9i69 xexx8yu x2b8uid">
+                                        <div class="_aarf x1e56ztr x1gslohp">
+                                            <canvas class="_aarh" height="66" width="66" style="position: absolute; top: -5px; left: -5px; width: 66px; height: 66px;"></canvas>
+                                            <span
+                                                class="xnz67gz x14yjl9h xudhj91 x18nykt9 xww2gxu x9f619 x1lliihq x2lah0s x6ikm8r x10wlt62 x1n2onr6 x1ykvv32 xougopr x159fomc xnp5s1o x194ut8o x1vzenxt xd7ygy7 xt298gk x1xrz1ek x1s928wv x162n7g1 x2q1x1w x1j6awrg x1n449xj x1m1drc7"
+                                                role="link"
+                                                tabindex="-1"
+                                                style="width: 56px; height: 56px;"
+                                            >
+                                                <img
+                                                    src="{{this.item.url}}"
+                                                    class="x6umtig x1b1mbwd xaqea5y xav7gou xk390pu x5yr21d xpdipgo xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x11njtxf xh8yej3"
+                                                    alt=""
+                                                />
+                                            </span>
+                                        </div>
+                                        <div class="_aacl _aacn _aacu _aacx _aad6 _aade" role="button" tabindex="0">
+                                            <div class="x9f619 x1lliihq x6ikm8r x10wlt62 x1n2onr6 x2b8uid xlyipyv xuxw1ft xhikscq x1yf5rgg x1h0ha7o xg83lxy">
+                                                {{ this.item.username}}
+                                            </div>
+                                        </div>
+                                    </button>
+                                </div>
+                            </li>
+                            
+                        </ng-container>
+
+                        <!-- 
                         <li class="_acaz" tabindex="-1" style="transform: translateX(2px);">
                             <div class="_aauk _aegn">
                                 <button class="x78zum5 xdt5ytf xjbqb8w x76ihet xwmqs3e x112ta8 xxxdfa6 x1ypdohk x1fu8urw x6s0dn4 xamitd3 x18d9i69 xexx8yu x2b8uid">
@@ -240,14 +274,22 @@
                                 </button>
                             </div>
                         </li>
+                        -->
                     </ul>
                 </div>
-                <button aria-label="Atras" class="_afxv _al46 _aahm _akl_ _al47" tabindex="-1">
-                    <div class="_9zs1"></div>
-                </button>
-                <button aria-label="Siguiente" class="_afxw _al46 _aahm _akl_ _al47" tabindex="-1">
-                    <div class="_9zs2"></div>
-                </button>
+
+                <ng-container *ngIf="this.btnLeft">
+                    <button aria-label="Atras" class="_afxv _al46 _aahm _akl_ _al47" tabindex="-1" (click)="swipeLeft()">
+                        <div class="_9zs1"></div>
+                    </button>
+                </ng-container>
+                
+                <ng-container *ngIf="this.btnRight">
+                    <button aria-label="Siguiente" class="_afxw _al46 _aahm _akl_ _al47" tabindex="-1" (click)="swipeRight()">
+                        <div class="_9zs2"></div>
+                    </button>
+                </ng-container>
+                
             </div>
         </div>
     </div>
