animacion sidebarc search y notif

--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -1010,14 +1010,14 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                            <!-- Barra lateral de Búsqueda start -->
-                                                                <div class="x10l6tqk x1u3tz30 x1ja2u2z" #asSideSearch *ngIf="this.displaySideSearch" style="transform: translateX(0%);">
+                                                            <!-- Barra lateral de Búsqueda start style="transform: translateX(0%);"-->
+                                                                <div @fadeAnimation class="x10l6tqk x1u3tz30 x1ja2u2z" #asSideSearch *ngIf="this.displaySideSearch"  [ngStyle]="{'transform' : 'translateX( '+this.translateNotiX+'%)' }" >
                                                                     <app-sidebarsearch (usernameEvent)="this.gotoProfile($event)" ></app-sidebarsearch>
                                                                 </div>
                                                             <!-- / Barra lateral de búsqueda end -->
 
                                                             <!-- Barra lateral de Notificaciones start -->
-                                                                <div class="x10l6tqk x1u3tz30 x1ja2u2z" *ngIf="this.displaySideNotification" style="transform: translateX(0%);">
+                                                                <div @fadeAnimation class="x10l6tqk x1u3tz30 x1ja2u2z" *ngIf="this.displaySideNotification" style="transform: translateX(0%);">
                                                                     <app-sidebarnotification></app-sidebarnotification>
                                                                 </div>
                                                             <!-- / Barra lateral de Notificaciones end -->
