--- a/src/styles.css
+++ b/src/styles.css
@@ -5183,3 +5183,23 @@ textarea, .inputtext, .inputpassword {
 .xexx8yu {
   padding-top: 0;
 }
+
+/* CSS People */
+
+._aa0- {
+    align-items: stretch;
+    border: 0;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    flex-shrink: 0;
+    font: inherit;
+    font-size: 100%;
+    margin: 0 auto;
+    max-width: 600px;
+    padding: 0;
+    position: relative;
+    vertical-align: baseline;
+    width: 100%;
+}
