--- a/src/app/shared/components/main/feed/stories/stories.component.html
+++ b/src/app/shared/components/main/feed/stories/stories.component.html
@@ -8,10 +8,11 @@
                         <li style="transform: translateX(0); width: 2px;"></li>
                         <li style="transform: translateX(12000px); width: 2px;"></li>
 
-                        <ng-container [ *ngFor="let item of this.stories | slice : (currentPage - 1) * pageSize  : currentPage * pageSize;   index as i; count as c">
+                        <ng-container [ *ngFor="let item of this.stories | slice : (currentPage - 1) * 4  : currentPage * pageSize;   index as i; count as c">
                             <li class="_acaz" tabindex="-1" [ngStyle]="{'transform': i == 0 ? 'translateX( ' + (this.translateX-78) + 'px)' : 'translateX( ' + (i*this.translateX+2) + 'px)' }">
                                 <div class="_aauk _aegn">
-                                    <button class="x78zum5 xdt5ytf xjbqb8w x76ihet xwmqs3e x112ta8 xxxdfa6 x1ypdohk x1fu8urw x6s0dn4 xamitd3 x18d9i69 xexx8yu x2b8uid">
+                                    <button class="x78zum5 xdt5ytf xjbqb8w x76ihet xwmqs3e x112ta8 xxxdfa6 x1ypdohk x1fu8urw x6s0dn4 xamitd3 x18d9i69 xexx8yu x2b8uid" [routerLink]="['stories', item.username, '3099938179339172451']">
+                                    <!-- <button class="x78zum5 xdt5ytf xjbqb8w x76ihet xwmqs3e x112ta8 xxxdfa6 x1ypdohk x1fu8urw x6s0dn4 xamitd3 x18d9i69 xexx8yu x2b8uid" (click)="filter.showStories = true"> -->
                                         <div class="_aarf x1e56ztr x1gslohp">
                                             <canvas class="_aarh" height="66" width="66" style="position: absolute; top: -5px; left: -5px; width: 66px; height: 66px;"></canvas>
                                             <span
