--- a/src/styles.css
+++ b/src/styles.css
@@ -5185,7 +5185,6 @@ textarea, .inputtext, .inputpassword {
 }
 
 /* CSS People */
-
 ._aa0- {
     align-items: stretch;
     border: 0;
@@ -5202,4 +5201,523 @@ textarea, .inputtext, .inputpassword {
     position: relative;
     vertical-align: baseline;
     width: 100%;
+}
+.x15h9jz8 {
+  max-width: calc(100% - 64px - 64px);
+}
+
+
+
+
+/* CSS Stories */
+._ac0n {
+  align-items: stretch;
+  align-self: center;
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  position: relative;
+  vertical-align: baseline;
+  width: 100%;
+}
+.x19w6rv {
+  transform-origin: left;
+}
+._ac0i {
+  border-radius: 20px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  height: 100%;
+  justify-content: center;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  position: relative;
+  text-align: center;
+  vertical-align: baseline;
+  width: 100%;
+  align-items: stretch;
+  border: 0;
+}
+._ac0j {
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+._ac07 {
+  align-items: stretch;
+  background: linear-gradient( 180deg, rgba(38, 38, 38, .6) 0%, rgba(38, 38, 38, 0) 100%, rgba(0, 0, 0, 1) );
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  vertical-align: baseline;
+}
+._ac07, ._ac08, ._ac09 {
+  bottom: -1px;
+  height: calc(100% + 2px);
+  left: -1px;
+  position: absolute;
+  right: -1px;
+  top: -1px;
+  width: calc(100% + 2px);
+}
+
+._advu {
+  max-width: calc(100% / var(--story-gallery-preview-scale-correction));
+}
+._ac0h {
+  align-items: stretch;
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  transform: scale(var(--story-gallery-preview-scale-correction));
+  vertical-align: baseline;
+}
+._afgd {
+  text-shadow: 0 0 4px rgba(0, 0, 0, .5);
+}
+
+._ac07, ._ac08, ._ac09 {
+  bottom: -1px;
+  height: calc(100% + 2px);
+  left: -1px;
+  position: absolute;
+  right: -1px;
+  top: -1px;
+  width: calc(100% + 2px);
+}
+._advu {
+  max-width: calc(100% / var(--story-gallery-preview-scale-correction));
+}
+._ac0h {
+  align-items: stretch;
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  transform: scale(var(--story-gallery-preview-scale-correction));
+  vertical-align: baseline;
+}
+
+._ac0a {
+  align-items: stretch;
+  border: 0;
+  border-left: 46px solid transparent;
+  border-right: 46px solid transparent;
+  box-sizing: content-box;
+  color: rgb(var(--web-always-white));
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  height: 100%;
+  justify-content: center;
+  margin: 0;
+  margin-left: -46px;
+  padding: 0;
+  position: relative;
+  -webkit-user-select: none;
+  vertical-align: baseline;
+  width: 100%;
+}
+
+._ac0b {
+  align-items: stretch;
+  background: rgb(var(--web-always-black));
+  border: 0;
+  box-sizing: border-box;
+  display: inline-block;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  vertical-align: baseline;
+  width: 100%;
+}
+
+._ac0c {
+  left: calc(-30px - 12px - 16px);
+}
+
+._ac0c, ._ac0d {
+  display: block;
+  margin-top: -13px;
+  opacity: .2;
+  position: absolute;
+  top: 50%;
+  transition: opacity .1s ease-in;
+}
+._ac0c, ._ac0d {
+  margin: 16px;
+}
+._ac0c, ._ac0d {
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  padding: 0;
+}
+
+
+._ac50 {
+  align-items: stretch;
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  vertical-align: baseline;
+  width: 100%;
+}
+
+._aag2 {
+  align-items: stretch;
+  border: 0;
+  bottom: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+  vertical-align: baseline;
+  visibility: hidden;
+}
+
+._ac0k {
+  align-items: stretch;
+  background: linear-gradient( 180deg, rgba(38, 38, 38, .8) 0%, rgba(38, 38, 38, 0) 100% );
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  margin: 0;
+  padding: 20px 16px 32px 16px;
+  position: absolute;
+  top: 0;
+  vertical-align: baseline;
+  width: 100%;
+}
+
+._ac11 {
+  background: linear-gradient( 180deg, rgba(38, 38, 38, 0) 0%, rgba(38, 38, 38, .6) 100% );
+  align-items: stretch;
+  border: 0;
+  bottom: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  height: 150px;
+  justify-content: flex-end;
+  left: 0;
+  margin: 0;
+  margin-top: auto;
+  padding: 0 16px 16px;
+  pointer-events: none;
+  position: absolute;
+  vertical-align: baseline;
+  width: 100%;
+  z-index: 999;
+}
+
+._9zm0 {
+  background-repeat: no-repeat;
+  background-position: -130px -98px;
+  height: 30px;
+  width: 30px;
+}
+
+._aa66 {
+  border-radius: 8px;
+}
+
+._aa65 {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  overflow: hidden;
+  width: 100%;
+}
+
+._aa64 {
+  align-items: stretch;
+  border: 0;
+  box-sizing: border-box;
+  display: block;
+  flex: none;
+  flex-direction: column;
+  font: inherit;
+  font-size: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+._ac0x, ._ac0y {
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+._ac57 {
+  height: 100%;
+  pointer-events: none;
+  position: absolute;
+}
+
+._ac3r {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 8px;
+}
+
+._ac3n:last-child {
+  margin-right: 0;
+}
+._ac3n {
+  flex-grow: 1;
+  height: 2px;
+  margin-right: 2px;
+  position: relative;
+}
+
+._ac3o {
+  align-items: stretch;
+  background: rgba(255, 255, 255, .35);
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+._ac3p, ._ac3o {
+  border-radius: 2px;
+  height: 2px;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+._ac3q {
+  transition: width var(--story-progressbar-update-tick) linear;
+  width: auto;
+  will-change: width;
+}
+._ac3p {
+  background: #fff;
+}
+
+._ac3p, ._ac3o {
+  border-radius: 2px;
+  height: 2px;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+
+._ac0l {
+  align-items: center;
+  color: #fff;
+  font-size: var(--system-14-font-size);
+  font-weight: var(--font-weight-system-regular);
+  line-height: var(--system-14-line-height);
+}
+
+._ac0m {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  margin-left: auto;
+  min-height: 40px;
+}
+
+._ac0o {
+  align-items: center;
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+._ac0d {
+  right: calc(-30px - 12px - 16px);
+}
+._9zm2 {
+  background-repeat: no-repeat;
+  background-position: -162px -98px;
+  height: 30px;
+  width: 30px;
+}
+
+._ac12 {
+  align-items: stretch;
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+._abx1 {
+  border-radius: 100vh;
+}
+._abx0 {
+  align-items: center;
+  border: 1px solid rgb(var(--grey-2));
+  border-radius: 22px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  min-height: 44px;
+  padding-left: 11px;
+  padding-right: 8px;
+  pointer-events: auto;
+}
+
+._abx4 {
+  align-items: stretch;
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  margin: 0;
+  margin-left: 8px;
+  padding: 0;
+  pointer-events: auto;
+  position: relative;
+  vertical-align: baseline;
+}
+
+._ac3h {
+  align-items: stretch;
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  pointer-events: auto;
+  position: relative;
+  vertical-align: baseline;
+}
+
+._abx2 {
+  background-color: transparent;
+  border: none;
+  color: rgb(var(--grey-2));
+  overflow: auto;
+  padding: 8px 9px;
+  resize: none;
+}
+
+
+body, button, input, textarea, button, input, textarea {
+  color: rgb(var(--ig-primary-text));
+  font-family: var(--font-family-system);
+  font-size: var(--system-14-font-size);
+  line-height: var(--system-14-line-height);
+}
+
+textarea._abx2:focus {
+  outline: none;
+}
+
+._ac0s, ._ac0s:visited, ._ac0s:active, ._ac0s:hover, ._ac0s:focus {
+  color: #fff!important;
+}
+
+.x5qyhuo {
+  background-color: #1a1a1a;
 }
